FU-394 QA fixes